# prompt-evolver

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: evolution.yaml  fitness.yaml  segment_schema.yaml
src/prompt_evolver/: __init__.py  analysis.py  config.py  evolve.py  fitness.py  genome.py  guidelines.py  llm.py  operators.py  problem.py  scenarios.py  validator.py
tests/: test_fitness.py  test_genome.py  test_operators.py
tests/fixtures/: example_agent.md
